--- a/browser/background-changer-app/rich.html
+++ b/browser/background-changer-app/rich.html
@@ -33,7 +33,7 @@
             <div class="d-flex flex-column align-items-center justify-content-center">
                 <div class="bg-dark px-5 py-1 text-center rounded-3 text-white">
                     <h4>Background Color:</h4>
-                    <h4 id="color">white</h4>
+                    <h4 id="color">#FFF</h4>
                 </div>
                 <button type="button" id="btn" class="btn btn-outline-primary btn-lg mt-4">Click Me</button>
             </div>
@@ -42,6 +42,6 @@
     
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js" integrity="sha512-ykZ1QQr0Jy/4ZkvKuqWn4iF3lqPZyij9iRv6sGqLRdTPkY69YX6+7wvVGmsdBbiIfN/8OdsI7HABjvEok6ZopQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="./main.js"></script>
+    <script src="./rich.js"></script>
 </body>
 </html>
