--- a/browser/jquery/events-on.html
+++ b/browser/jquery/events-on.html
@@ -10,6 +10,6 @@
     <button id="btn">Click Me</button>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="./events.js"></script>
+    <script src="./events-on.js"></script>
 </body>
 </html>
